--- a/index.html
+++ b/index.html
@@ -3,11 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <a href="">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>info@devstudio.com +11 (000) 111-11-11</address>
+      <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>
+      <a href="">WebStudio</a>
+      <p>
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
+        marketing &amp; growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
