--- a/index.html
+++ b/index.html
@@ -19,7 +19,63 @@
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h2>Strategy</h2>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h2>Punctuality</h2>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h2>Diligence</h2>
+        <p>
+          Research and confirm brands with the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h2>Technologies</h2>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="/images/team-card-1.jpg"
+              alt="Photo by Mark Guerrero"
+              width="264"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/team-card-2.jpg"
+              alt="Photo by Tom Ford"
+              width="264"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/team-card-3.jpg"
+              alt="Photo by Camila Garcia"
+              width="264"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/team-card-4.jpg"
+              alt="Photo by Daniel Wilson"
+              width="264"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer>
       <a href="">WebStudio</a>
       <p>
