--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
         <ul>
           <li>
             <img
-              src="/images/team-card-1.jpg"
+              src="./images/team-card-1.jpg"
               alt="Photo by Mark Guerrero"
               width="264"
             />
           </li>
           <li>
             <img
-              src="/images/team-card-2.jpg"
+              src="./images/team-card-2.jpg"
               alt="Photo by Tom Ford"
               width="264"
             />
           </li>
           <li>
             <img
-              src="/images/team-card-3.jpg"
+              src="./images/team-card-3.jpg"
               alt="Photo by Camila Garcia"
               width="264"
             />
           </li>
           <li>
             <img
-              src="/images/team-card-4.jpg"
+              src="./images/team-card-4.jpg"
               alt="Photo by Daniel Wilson"
               width="264"
             />
