fix header and footer

--- a/index.html
+++ b/index.html
@@ -7,15 +7,20 @@
   </head>
   <body>
     <header>
-      <a href="">WebStudio</a>
       <nav>
         <ul>
+          <a href="/index.html">WebStudio</a>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>info@devstudio.com +11 (000) 111-11-11</address>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </header>
@@ -77,10 +82,9 @@
       </section>
     </main>
     <footer>
-      <a href="">WebStudio</a>
+      <a href="/index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
     </footer>
