--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
     </header>
     <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <section>
         <h2>Strategy</h2>
         <p>
