--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
               alt="Photo by Mark Guerrero"
               width="264"
             />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img
@@ -76,6 +78,8 @@
               alt="Photo by Tom Ford"
               width="264"
             />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -83,6 +87,8 @@
               alt="Photo by Camila Garcia"
               width="264"
             />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
@@ -90,6 +96,8 @@
               alt="Photo by Daniel Wilson"
               width="264"
             />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
